@@ -6,6 +6,7 @@
 	* Fixed some errors to compile normally on Ubuntu 9.10.
 	* Changed CG_USE_WIN32_GETHOSTADDRESSES flag as default for Windows platform.
 	* Fixed cg_upnp_device_unsubscriptionrecieved() to unscribe normally.
+	* Fixed cg_upnp_device_ssdpmessagereceived() not to ignore IPv6 multicast.
 	
 2010-01-20  Satoshi Konno <skonno@cybergarage.org>
 	* Removed service mutex control from cg_upnp_service_addsubscriber() to avoid deadlock.
